# LearnREDM

./: README.md
example/MyTest/: CMakeLists.txt
example/MyTest/MyTest/: CMakeLists.txt
example/MyTest/MyTest/inc/: BackgroundPreview.h  CommModule.h  DUIDragFrame.h  ExportSet.h  ForegroundPreview.h  ImagePreview.h  MainWnd.h  MsgBox.h  PersonPreview.h  PreChoose.h  SceneChoose.h  SceneShoot.h  ShootSystem.h  StdAfx.h
example/MyTest/MyTest/src/: BackgroundPreview.cpp  CommModule.cpp  DUIDragFrame.cpp  ExportSet.cpp  ForegroundPreview.cpp  ImagePreview.cpp  MainWnd.cpp  MsgBox.cpp  MyTest.cpp  PersonPreview.cpp  PreChoose.cpp  SceneChoose.cpp  SceneShoot.cpp  ShootSystem.cpp
example/MyTest/PSCoreLib/include/: PSExport.h
example/MyTest/Psdump/: CMakeLists.txt
example/MyTest/Psdump/inc/: Layer.h  PsdParser.h  lodepng.h
example/MyTest/Psdump/libpsd-0.9/include/: psd_config.h
example/MyTest/Psdump/libpsd-0.9/src/: thumbnail.c
example/MyTest/Psdump/src/: Document.cpp  Layer.cpp  PsdParser.cpp  lodepng.cpp
example/QQloginRes/layout/xml/: global.xml  main.xml
example/QQloginRes/themes/theme0/: dmindex.xml
example/WorldTripShootRes/layout/: dmindex.xml
example/WorldTripShootRes/layout/xml/: addprechoose.xml  exportset.xml  global.xml  main.xml  msgbox.xml  prechoose.xml  scenechoose.xml  scenedetail.xml  sceneselect.xml  sceneshoot.xml  shootsystem.xml
example/WorldTripShootRes/themes/: dmindex.xml
example/WorldTripShootRes/themes/theme0/: dmindex.xml
example/WorldTripShootRes/themes/theme1/: dmindex.xml
example/WorldTripShootRes/themes/theme2/: dmindex.xml
(+17 files in other folders)
